--- a/Index.html
+++ b/Index.html
@@ -5,11 +5,12 @@
     <script  type = "text/javascript" src="myscript.js"></script>
 </head>
 
-<body>
+<body onload="init()" oncontextmenu="return false;">
 <H1>Minesweeper</H1>
 <table id="grid">
 </table>
 <input type = "button" onclick = "generateGrid()" value = "Display">  
 <BUTTON onclick="generateGrid()">Reset Grid</BUTTON>
+<br>
 </body>
 </html>
