--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="main.css">
-    <script  type = "text/javascript" src="myscript.js"></script>
+    <link rel="stylesheet" href="static/css/main.css">
+    <script  type = "text/javascript" src="static/js/myscript.js"></script>
 </head>
 
 <body onload="init()" oncontextmenu="return false;">
